dataset1235/2025-2/2318198438/users/1139469213/executions/2601575092_1964285824.log
== RUN (2025-08-12 00:57:24)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", )

print("Potenciacao: ", 2³)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2³)
                            ^
SyntaxError: invalid character '³' (U+00B3)
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2³)
                            ^
SyntaxError: invalid character '³' (U+00B3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:56:28)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2,2)

print("Resto: ", )

print("Potenciacao: ", 2^3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  1
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:55:44)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", )

print("Potenciacao: ", 2³)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2³)
                            ^
SyntaxError: invalid character '³' (U+00B3)
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2³)
                            ^
SyntaxError: invalid character '³' (U+00B3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:56:32)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", )

print("Potenciacao: ", 2^3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  1
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 01:00:03)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", 30%11)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 01:00:05)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", 30%11)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:58:04)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", )

print("Potenciacao: ", 2**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:55:44)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", )

print("Potenciacao: ", 2³)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2³)
                            ^
SyntaxError: invalid character '³' (U+00B3)
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2³)
                            ^
SyntaxError: invalid character '³' (U+00B3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:57:14)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", )

print("Potenciacao: ", 3^2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  1
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:55:58)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", )

print("Potenciacao: ", 2^3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  1
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:55:43)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 2*4)

print("Divisao: ", 16/2)

print("Resto: ", )

print("Potenciacao: ", 2³)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2³)
                            ^
SyntaxError: invalid character '³' (U+00B3)
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2³)
                            ^
SyntaxError: invalid character '³' (U+00B3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
